# basics
AC_INIT(src/mp3fs.c)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(mp3fs, 0.02)

# check standard stuff
AC_PROG_LIBTOOL
AC_PROG_CC

# check headers
AC_CHECK_HEADER(lame/lame.h,,AC_MSG_ERROR([You Must install liblame-dev to build mp3fs]))
AC_CHECK_HEADER(FLAC/file_decoder.h,,AC_MSG_ERROR([You Must install libflac-dev to build mp3fs]))

# check packages which use pkg-config
PKG_CHECK_MODULES(fuse, fuse)

# defines and output
AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug], [Enable debug output]), AC_DEFINE([__DEBUG__], [], [Debugging enabled]))

# Large file support
AC_SYS_LARGEFILE
AC_OUTPUT([ 
	Makefile 
	src/Makefile 
	])
